# tocl

./: README.md
libs/liboctave-0.1/: ChangeLog  Makefile
libs/liboctave-0.1/base/: Makefile  cell.cc  cell_cat.oct  enum.m  get_options.m  misc.cc  regex.cc  regex_search.oct
libs/liboctave-0.1/inst/: get_options.m
libs/liboctave-0.1/io/: Makefile  istream.cc  istream_open.oct
libs/liboctave-0.1/src/: Makefile.am  acsite.m4  cell.cc  cell_cat.cc  configure.ac  istream.cc  istream_open.cc  matrix.cc  matrix_rankize.cc  misc.cc  octave_c_ptr_value.h  quadprog_cgal.cc  quadprog_common.cc  quadprog_common.h  regex.cc  regex_match.cc
libs/liboctave-0.1/tests/: Makefile  get_options_test.m
libs/octopus-0.1/: ChangeLog  DESCRIPTION
libs/octopus-0.1/inst/: binrel.m  enum.m  get_options.m  getfielddef.m  log_series.m  octave_version.m  parse_double.m  quadprog.m  rotation_2d.m  spfactorial.m
libs/octopus-0.1/src/: .gitignore  Makefile.am  acsite.m4  array_zip.cc  cell_cat.cc  configure.ac  in_convex_hull.cc  isfunctionhandle.cc  istream_open.cc  last_downfall.cc  matrix_rankize.cc  octave_c_ptr_value.h  parse_qps.cc  psi.cc  quadprog_cgal.cc  quadprog_common.cc  quadprog_common.h  quadprog_turlach.cc  regex_match.cc  undefs.h
libs/octopus-0.1/tests/: get_options_test.m  qps_test.m  qps_test.pl  quadprog_test.m
research/clustering/: combineEM.m  combineEM.sh  evalPurity.m  evalPurity.sh
research/clustering-m/: Makefile  addPath.m  circumference_points.m  combineWeighted.m  cread_sparse.cc  cread_sparse_matlab.c  create_phi.m  evalNMI.m  evalNMI.ny.m  evalNMI.ny.sh  evalNMI.sh  evalPurity.m  evalPurity.ny.m  evalPurity.ny.sh  evalPurity.sh  find_posterior.m  kaban.m  makeTest.m  norm_sq.m  posterior_probabilities.m  random_mapping.m  read_sparse.m  read_sparse_normalized.m  som.m  som_bmus_sparse.m  som_cosine_distance.m  som_mapping.m  som_plot.m  split_string.m
research/clustering-m/aux/: all_distances.m  normalize_cols.m  normalize_rows.m
research/clustering-m/auxiliar/: all_distances.m  circumference_points.m  normalize_cols.m  normalize_matrix.m  normalize_rows.m  random_mapping.m
research/clustering-m/combination/: Makefile  comb_binary_matrix.m  comb_combine_binary.m  comb_combine_itmedian.m  comb_combine_mem.m  comb_combine_mem_weighted.m  comb_combine_unfuzzy.m  comb_eval.m  comb_itmedian_matrix.m  comb_local_max.m  comb_mem.cc  comb_mem_addweight.m  comb_mem_initialize.m  comb_mem_loglike.oct  comb_multinomial_matrix.m  comb_one_unfuzzy_matrix.cc  comb_sharing_matrix.m  comb_unfuzzy_matrix.m
research/clustering-m/io/: Makefile  cread_labels_matlab.c  cread_sparse.cc  cread_sparse_matlab.c  read_cals_combi.m  read_clustering.oct  read_labels.m  read_sparse.m  read_sparse_matlab.m
research/clustering-m/kaban/: create_phi.m  kaban.m  regular_grid.m  starting_mapping.m
research/clustering-m/measures/: Makefile  meas_consensus.m  meas_nmi.m  meas_occ.cc  meas_purity.m
research/clustering-m/som/: som.m  som_best_match.m  som_bmus_sparse.m  som_fraction_pie.m  som_mapping.m  som_plot.m  som_update_neighbours.m
research/clustering-m/weak/: weak_kmeans.m  weak_random_combination.m  weak_random_projection.m
research/clustering/combination/: comb_binary_matrix.m  comb_combine_binary.m  comb_combine_itmedian.m  comb_combine_mem.m  comb_combine_mem_weighted.m  comb_combine_unfuzzy.m  comb_itmedian_matrix.m  comb_local_max.m  comb_mem.oct  comb_mem_addweight.m  comb_mem_expectation.oct  comb_mem_initialize.m  comb_mem_loglike.oct  comb_mem_maximization.oct  comb_multinomial_matrix.m  comb_one_unfuzzy_matrix.oct  comb_sharing_matrix.m  comb_unfuzzy_matrix.m
research/clustering/io/: cread_labels.oct  cread_sparse.oct  cread_sparse_idf.oct  read_cals_combi.m  read_clustering.oct  read_labels.m  read_labels_num.oct  read_sparse.m  read_sparse_matlab.m
research/clustering/measures/: meas_consensus.m  meas_occ.cc  meas_purity.m
research/patterns/: CPM3C.cc  CPM3C_CCCP.m  CPM3C_clustering.m  CPM3C_cost.m  CPM3C_loop.m  CPM3C_mvc.oct  CPMMC_CCCP.m  CPMMC_CCCP_dual.m  CPMMC_loop.m  CPMMC_mvc.m  Makefile  ROC.m  affinity.cc  affinityMatrix.m  andoClusterers.m  andoElements.m  andoRoc.m  ando_data.m  autoFuzzyParams.m  bbcpressSize.m  bernoulli_clustering.m  bernoulli_expectation.m  bernoulli_maximization.m  binary_evaluation_curves.m  binrel.m  catastrophePlots.m  cell.cc  classification_evaluation.m  cluster_plot.m  clusteringSimilarity.m  confusionAndoData.m  data_size.m  detectSrbcParams.m  dirichletTest.m  dirichlet_clustering.m  dirichlet_estimation.cc  dirichlet_expectation.m  dirichlet_maximization.m  dirichlet_rnd.m  distance_probability.m  (+53 more)
research/patterns/@AlignedGaussianEM/: AlignedGaussianEM.m  maximization.m
research/patterns/@AlignedGaussianEMModel/: AlignedGaussianEMModel.m  expectation.m
research/patterns/@AutoDGRADE/: AutoDGRADE.m  cluster.m  cluster_sone.m
research/patterns/@AutoHDS/: AutoHDS.m  cluster.m
research/patterns/@BBC/: BBC.m  cluster.m
research/patterns/@BBCPress/: BBCPress.m  cluster.m
research/patterns/@BBOCC/: BBOCC.m  cluster.m
research/patterns/@BIC/: BIC.m  apply.m
research/patterns/@Bernoulli/: Bernoulli.m  cluster.m  maximization.m
research/patterns/@BernoulliModel/: BernoulliModel.m  expectation.m
research/patterns/@BregmanBallModel/: BregmanBallModel.m  centroid.m  centroids.m  expectation.m  score.m  threshold.m
research/patterns/@BregmanEM/: BregmanEM.m  maximization.m
research/patterns/@BregmanEMModel/: BregmanEMModel.m  centroids.m  expectation.m
research/patterns/@ClusterInterModel/: ClusterInterModel.m  apply.m
research/patterns/@ClusterInterpolator/: ClusterInterpolator.m  apply.m
research/patterns/@ConstInterModel/: ConstInterModel.m  apply.m  inverse.m
research/patterns/@CosineDistance/: CosineDistance.m  apply.m
research/patterns/@CriterionClusterer/: CriterionClusterer.m  cluster.m
research/patterns/@DGRADE/: DGRADE.m  cluster.m  cluster_singleton.m  cluster_sone.m
research/patterns/@DS/: DS.m  cluster.m  gene-diver
research/patterns/@Dirichlet/: Dirichlet.m  cluster.m  (+1 more)
(+248 files in other folders)
